--- a/Word2Vec-web/public/index.html
+++ b/Word2Vec-web/public/index.html
@@ -7,17 +7,19 @@
 		<link rel="stylesheet"
 			href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet"
-			href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+			href="css/style.css">
 	</head>
 	<body class="container">
-		<div ng-view></div>
+		<div ui-view></div>
 		<script src="vendor/angular/angular.js"></script>
 		<script src="vendor/angular-route/angular-route.js"></script>
 		<script src="vendor/angular-resource/angular-resource.js"></script>
 		<script src="vendor/d3/d3.min.js"></script>
 		<script src="vendor/d3-cloud/build/d3.layout.cloud.js"></script>
 		<script src="vendor/angular-d3-word-cloud/dist/angular-word-cloud.min.js"></script>
+		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/controllers/CloudWords.js"></script>
+		<script src="js/controllers/Documents.js"></script>
 	</body>
 </html>
