word cloud from spark, and post from stackoverflow

--- a/Word2Vec-web/public/index.html
+++ b/Word2Vec-web/public/index.html
@@ -19,6 +19,7 @@
 		<script src="vendor/angular-d3-word-cloud/dist/angular-word-cloud.min.js"></script>
 		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/services/Word2VecService.js"></script>
 		<script src="js/controllers/Word2Vec.js"></script>
 		<script src="js/controllers/CloudWords.js"></script>
 	</body>
